# Robotics-Lab-Assignment-2

./: README.md
src/rx200_custom_description/: CMakeLists.txt  package.xml
src/rx200_custom_description/launch/: view_rx200_with_camera.launch.py
src/rx200_custom_description/urdf/: rx200_with_camera.urdf.xacro
src/rx200_moveit_control/: package.xml  setup.py
src/rx200_moveit_control/launch/: main.launch.py  run.py
src/rx200_moveit_control/rx200_moveit_control/: add_camera_to_scene.py  hsv_calibrator.py  manipulation_node.py  pick_place_custom.py  rx200_moveit_action_client.py  snapshot_inspector.py  vision  vision_node.py
src/rx200_xsarm_descriptions/: package.xml
src/rx200_xsarm_descriptions/urdf/: rx200.urdf.xacro
