<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx200_moveit_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rishabh12j@gmail.com">master26</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <exec_depend>interbotix_xsarm_moveit</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rx200_xsarm_descriptions</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>